.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:36:11 **** Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/CSVReader.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/CSVReader.d" "../src/CSVReader.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/CSVReader.o" "../src/CSVReader.cpp"
Finished building: ../src/CSVReader.cpp
 
Building file: ../src/cuda_select.cu
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/cuda_select.d" "../src/cuda_select.cu"
/usr/bin/nvcc -G -g -O0 --compile --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30  -x cu -o  "src/cuda_select.o" "../src/cuda_select.cu"
Finished building: ../src/cuda_select.cu
 
Building file: ../src/cudatbase.cu
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/cudatbase.d" "../src/cudatbase.cu"
/usr/bin/nvcc -G -g -O0 --compile --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30  -x cu -o  "src/cudatbase.o" "../src/cudatbase.cu"
Finished building: ../src/cudatbase.cu
 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
Finished building: ../src/select.cpp
 
Building target: cudatbase
Invoking: NVCC Linker
/usr/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "cudatbase"  ./src/CSVReader.o ./src/cuda_select.o ./src/cudatbase.o ./src/select.o   
Finished building target: cudatbase
 
15:39:52 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
../src/select.cpp: In member function ‘void SELECT::run()’:
../src/select.cpp:62:5: error: ‘selectRule’ was not declared in this scope
     selectRule.erase(selectRule.begin(),selectRule.begin()+3);
     ^~~~~~~~~~
../src/select.cpp:63:22: error: unable to deduce ‘auto&&’ from ‘selectRule’
     for(string asd : selectRule)
                      ^~~~~~~~~~
../src/select.cpp:65:9: error: ‘input’ was not declared in this scope
         input = asd.find("&&");
         ^~~~~
../src/select.cpp:69:44: error: ‘OR_collectDataVector’ was not declared in this scope
             and_method(collectDataVector_p,OR_collectDataVector,AND_collectDataVector,workDataVector);
                                            ^~~~~~~~~~~~~~~~~~~~
../src/select.cpp:69:65: error: ‘AND_collectDataVector’ was not declared in this scope
             and_method(collectDataVector_p,OR_collectDataVector,AND_collectDataVector,workDataVector);
                                                                 ^~~~~~~~~~~~~~~~~~~~~
../src/select.cpp:69:87: error: ‘workDataVector’ was not declared in this scope
             and_method(collectDataVector_p,OR_collectDataVector,AND_collectDataVector,workDataVector);
                                                                                       ^~~~~~~~~~~~~~
../src/select.cpp:78:43: error: ‘OR_collectDataVector’ was not declared in this scope
             or_method(collectDataVector_p,OR_collectDataVector);
                                           ^~~~~~~~~~~~~~~~~~~~
../src/select.cpp:88:29: error: ‘dataBase_r’ was not declared in this scope
             equal(input,asd,dataBase_r,collectDataVector_p,workDataVector);
                             ^~~~~~~~~~
../src/select.cpp:88:60: error: ‘workDataVector’ was not declared in this scope
             equal(input,asd,dataBase_r,collectDataVector_p,workDataVector);
                                                            ^~~~~~~~~~~~~~
src/subdir.mk:34: recipe for target 'src/select.o' failed
make: *** [src/select.o] Error 1
15:40:11 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
Finished building: ../src/select.cpp
 
Building target: cudatbase
Invoking: NVCC Linker
/usr/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "cudatbase"  ./src/CSVReader.o ./src/cuda_select.o ./src/cudatbase.o ./src/select.o   
Finished building target: cudatbase
 
15:40:21 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
../src/select.cpp: In member function ‘void SELECT::run()’:
../src/select.cpp:62:5: error: ‘selectRule’ was not declared in this scope
     selectRule.erase(selectRule.begin(),selectRule.begin()+3);
     ^~~~~~~~~~
../src/select.cpp:63:22: error: unable to deduce ‘auto&&’ from ‘selectRule’
     for(string asd : selectRule)
                      ^~~~~~~~~~
../src/select.cpp:65:9: error: ‘input’ was not declared in this scope
         input = asd.find("&&");
         ^~~~~
../src/select.cpp:69:44: error: ‘OR_collectDataVector’ was not declared in this scope
             and_method(collectDataVector_p,OR_collectDataVector,AND_collectDataVector,workDataVector);
                                            ^~~~~~~~~~~~~~~~~~~~
../src/select.cpp:69:65: error: ‘AND_collectDataVector’ was not declared in this scope
             and_method(collectDataVector_p,OR_collectDataVector,AND_collectDataVector,workDataVector);
                                                                 ^~~~~~~~~~~~~~~~~~~~~
../src/select.cpp:69:87: error: ‘workDataVector’ was not declared in this scope
             and_method(collectDataVector_p,OR_collectDataVector,AND_collectDataVector,workDataVector);
                                                                                       ^~~~~~~~~~~~~~
../src/select.cpp:78:43: error: ‘OR_collectDataVector’ was not declared in this scope
             or_method(collectDataVector_p,OR_collectDataVector);
                                           ^~~~~~~~~~~~~~~~~~~~
../src/select.cpp:88:29: error: ‘dataBase_r’ was not declared in this scope
             equal(input,asd,dataBase_r,collectDataVector_p,workDataVector);
                             ^~~~~~~~~~
../src/select.cpp:88:60: error: ‘workDataVector’ was not declared in this scope
             equal(input,asd,dataBase_r,collectDataVector_p,workDataVector);
                                                            ^~~~~~~~~~~~~~
src/subdir.mk:34: recipe for target 'src/select.o' failed
make: *** [src/select.o] Error 1
16:03:05 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
../src/select.cpp: In member function ‘void SELECT::run()’:
../src/select.cpp:90:25: error: ‘asd’ was not declared in this scope
             equal(input,asd,dataBase_r,collectDataVector_p,workDataVector);
                         ^~~
../src/select.cpp:90:29: error: ‘dataBase_r’ was not declared in this scope
             equal(input,asd,dataBase_r,collectDataVector_p,workDataVector);
                             ^~~~~~~~~~
../src/select.cpp:90:60: error: ‘workDataVector’ was not declared in this scope
             equal(input,asd,dataBase_r,collectDataVector_p,workDataVector);
                                                            ^~~~~~~~~~~~~~
src/subdir.mk:34: recipe for target 'src/select.o' failed
make: *** [src/select.o] Error 1
16:08:42 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
Finished building: ../src/select.cpp
 
Building target: cudatbase
Invoking: NVCC Linker
/usr/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "cudatbase"  ./src/CSVReader.o ./src/cuda_select.o ./src/cudatbase.o ./src/select.o   
Finished building target: cudatbase
 
16:14:54 **** Incremental Build of configuration Debug for project cudatbase ****
make all 
Building file: ../src/select.cpp
Invoking: NVCC Compiler
/usr/bin/nvcc -G -g -O0 -gencode arch=compute_30,code=sm_30  -odir "src" -M -o "src/select.d" "../src/select.cpp"
/usr/bin/nvcc -G -g -O0 --compile  -x c++ -o  "src/select.o" "../src/select.cpp"
Finished building: ../src/select.cpp
 
Building target: cudatbase
Invoking: NVCC Linker
/usr/bin/nvcc --cudart static --relocatable-device-code=false -gencode arch=compute_30,code=compute_30 -gencode arch=compute_30,code=sm_30 -link -o  "cudatbase"  ./src/CSVReader.o ./src/cuda_select.o ./src/cudatbase.o ./src/select.o   
Finished building target: cudatbase
 
